--- a/README
+++ b/README
@@ -1,19 +1,3 @@
-This are handlers made for MoreMaterials. To use, you should have to download MoreMaterialsPlus.
-Download the handlers here: https://github.com/Cybermaxke/MMHandlers/tree/master/MMHandlers/bin
-
-Example:
-
-Type: Item
-Lclick:
-  Handler: HealingHandler
-Rclick:
-  Handler: LightingHandler
-
-
-Example2:
-
-Type: Block
-WalkAction:
-  Handler: PoisonHandler
-RedstonePowered:
-  Handler: ExplosionHandler
+This are handlers made for MoreMaterials 1.8 . To use, you should have to download MoreMaterials 1.8 or over.
+theses handlers are updated from Cybermaxke's working for versions 1.7
+originals handlers can be found there : https://github.com/Cybermaxke/MMHandlers
